# OmniArch

./: README.md
docs/: prd-MeetFlow.md
smartmeeting/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  env.example  pyproject.toml  requirements.txt  run.sh
smartmeeting/.github/workflows/: build-image.yml
smartmeeting/data/: README.md  minutes_sample1.docx  minutes_sample1.md  minutes_sample1.txt  minutes_sample2.txt  minutes_sample3.txt
smartmeeting/docs/: prd.md
smartmeeting/mock/: booking_statistics.csv  bookings.csv  buildings.csv  departments.csv  meeting_minutes.csv  meeting_rooms.csv  tasks.csv  user_requirements.csv  users.csv
smartmeeting/smartmeeting/: __init__.py  auth_manager.py  data_manager.py  lingji_ai.py  llm.py  pages_manager.py  ui_components.py
smartmeeting/smartmeeting/agent/: __init__.py  config.py  graph.py  nodes.py  state.py  tools.py
smartmeeting/smartmeeting/pages/: __init__.py  analysis.py  booking.py  calendar.py  dashboard.py  login.py  minutes.py  settings.py  tasks.py
smartmeeting/smartmeeting/tools/: __init__.py  file_processor.py  lingji_ai.py  llm.py  minutes_generator.py  speech_transcriber.py  task_generator.py  text_utils.py
smartmeeting/tests/: AGENT_TESTS_README.md  __init__.py  test_agent_config.py  test_agent_graph.py  test_agent_integration.py  test_agent_nodes.py  test_agent_runner.py  test_agent_simple.py  test_agent_state.py  test_agent_tools.py  test_app.py  test_lingjie_ai.py  test_llm.py  test_pandasai.py  test_pandasai_qwen.py
streamlit/: .gitignore  app.py  (+9 more)
(+59 files in other folders)
