[tool.poetry]
name = "smartmeeting"
version = "0.2.0"
description = "Smart Meeting System - A Streamlit-based intelligent meeting management application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "smartmeeting"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-dotenv = ">=1.0.0"
pydantic = ">=2.0.0"
streamlit = ">=1.46.1"
plotly = ">=6.2.0"
faker = ">=19.12.0"
pandasai = ">=3.0.0b19"
pandasai-openai = ">=0.1.4"
streamlit-aggrid = ">=1.1.0"
streamlit-card = ">=1.0.0"
streamlit-calendar = ">=0.1.0"
streamlit-plotly-events = ">=0.0.6"
langgraph = ">=0.5.0"
langchain-core = ">=0.1.0"
matplotlib = ">=3.6.0"
aliyun-python-sdk-core = ">=2.13.1"
dashscope = "^1.23.8"
langchain-community = "^0.3.27"
python-docx = ">=0.8.11"
PyPDF2 = ">=3.0.0"
pdfplumber = "^0.11.7"
pymupdf = "^1.26.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-mock = ">=3.10.0"
pyyaml = ">=6.0.1"
black = ">=24.0.0"
reportlab = ">=4.0.0"

[tool.poetry.scripts]
smartmeeting = "app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 